--- a/src/component/style.css
+++ b/src/component/style.css
@@ -205,14 +205,23 @@ img {
 .Signup:hover {
   color: #111111;
 }
-
+/* ====================================
+      second section container
+==================================== */
+.second_section {
+  display: flex;
+  justify-content: space-between;
+  width: 85%;
+  margin: 0 auto;
+  margin-top: 100px;
+}
 /* ====================================
       listing product
 ==================================== */
 .list_big_container {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  width: 100%;
-  margin: 100px 0 0 100px;
+  width: 68%;
+  /* margin: 100px 0 0 100px; */
   /* border: 2px solid green; */
 }
 .today_heading {
@@ -295,9 +304,9 @@ img {
 .sidebar_maincontainer {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   /* border: 2px solid green; */
-  margin-top: 50px;
-  margin-left: 150px;
-  width: 320px;
+  /* margin-top: 50px; */
+  /* margin-left: 150px; */
+  width: 30%;
 }
 .profile_container {
   /* display: flex; */
