new list form added

--- a/src/component/style.css
+++ b/src/component/style.css
@@ -390,3 +390,12 @@ img {
 .subscribe {
   width: 100%;
 }
+
+/* ====================================
+      creating list
+==================================== */
+
+label {
+  display: block;
+  /* width: 100%; */
+}
