--- a/src/assets/stylesheets/header.scss
+++ b/src/assets/stylesheets/header.scss
@@ -1,3 +1,81 @@
 .header {
-  border: 1px solid wheat;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  // border: 1px solid black;
+  height: 100vh;
+}
+.header_subcontainer {
+  display: flex;
+  // justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-left: 10px;
+  width: 95%;
+  height: 85%;
+  align-items: center;
+  border-radius: 10px;
+  border: 1px solid green;
+  box-shadow: 7px 7px 15px #bbcfda, -4px -4px 13px #fff,
+    inset 4px 4px 8px rgba(209, 217, 230, 0.2),
+    inset -8px -8px 8px rgba(255, 255, 255, 0.2);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.colorful_circle1 {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 46px;
+  height: 46px;
+  margin-top: 20px;
+  // border: 0.5px solid blue;
+  border-radius: 50%;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: linear-gradient(145deg, #d1d7dd, #f8ffff);
+  // box-shadow: 5px 5px 10px #909498, -5px -5px 10px #ffffff;
+  box-shadow: 5px 5px 10px #909498, -5px -5px 10px #ffffff;
+}
+.colorful_circle2 {
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 87%;
+  height: 87%;
+  // border: 0.5px solid blue;
+  border-radius: 50%;
+  background: #f12711; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #f5af19,
+    #f12711
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #f5af19,
+    #f12711
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.icon {
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 85%;
+  height: 85%;
+  // border: 0.5px solid red;
+  border-radius: 50%;
+  background-color: #e8eff5;
+  background: linear-gradient(145deg, #d1d7dd, #f8ffff);
+  // // box-shadow: 1px 1px 1px #909498, -1px -1px 1px #ffffff;
+}
+.icon_shadow {
+  align-self: center;
+  font-size: 1.3rem;
+  color: #f12711; /* fallback for old browsers */
+  filter: drop-shadow(3px 3px 2px #909498);
+  text-shadow: 5px 5px 3px #000000;
 }
