--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -4,7 +4,7 @@
       main body
 ==================================== */
 body {
-  background-color: #1b1b1b;
+  background-color: #e8eff5;
 }
 * {
   box-sizing: border-box;
