--- a/src/assets/stylesheets/home_page_devision.scss
+++ b/src/assets/stylesheets/home_page_devision.scss
@@ -1,4 +1,6 @@
 .home_page_devision {
+  background-color: #e8eff5;
+  font-family: "Roboto", sans-serif;
   display: grid;
   grid-template-columns: 6% 69% 25%;
 }
