--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -16,3 +16,5 @@ body {
 @import "./header.scss";
 @import "./article.scss";
 @import "./tag.scss";
+@import "./login.scss";
+@import "./signup.scss";
