--- a/src/assets/stylesheets/tag.scss
+++ b/src/assets/stylesheets/tag.scss
@@ -1,3 +1,40 @@
-.tag {
-  border: 1px solid wheat;
+.tag_main_container {
+  height: 95vh;
+  margin: auto 0;
+  margin-right: 25px;
+  border-radius: 20px;
+  box-shadow: 7px 7px 15px #bbcfda, -8px -8px 15px #fff;
+  transition: all 400ms;
+  background-color: #e8eff5;
+  font-family: "Roboto", sans-serif;
+  // inset 4px 4px 8px rgba(209, 217, 230, 0.2),
+  // inset -8px -8px 8px rgba(255, 255, 255, 0.2);
+
+  // border: 1px solid rgba(255, 255, 255, 0.3);
+}
+.tag_heading {
+  font-family: "Roboto", sans-serif;
+  display: block;
+  text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
+  margin: 20px auto;
+  font-size: 1.5rem;
+  text-align: center;
+  font-weight: 900;
+  color: #f12711;
+}
+.all_tag_container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  margin: 15px auto;
+  border-radius: 10px;
+  width: 90%;
+  box-shadow: 5px 5px 10px #bbcfda, -4px -4px 8px #fff;
+}
+.single_tags {
+  margin: 3px;
+  padding: 4px 8px;
+  border-radius: 4px;
+  background: linear-gradient(145deg, #d1d7dd, #f8ffff);
+  box-shadow: 3px 3px 7px #909498, -3px -3px 7px #ffffff;
 }
