--- a/src/assets/stylesheets/article.scss
+++ b/src/assets/stylesheets/article.scss
@@ -1,12 +1,135 @@
 .article_main_conatiner {
-  height: 95vh;
-  margin: auto 30px;
+  // height: 95vh;
+  margin: 20px 30px;
   border-radius: 20px;
   box-shadow: 7px 7px 15px #bbcfda, -7px -7px 15px #fff;
   transition: all 400ms;
   background-color: #e8eff5;
+  font-family: "Roboto", sans-serif;
+  color: #525252;
   // inset 4px 4px 8px rgba(209, 217, 230, 0.2),
   // inset -8px -8px 8px rgba(255, 255, 255, 0.2);
 
   // border: 1px solid rgba(255, 255, 255, 0.3);
+}
+.article_heading {
+  font-family: "Roboto", sans-serif;
+  display: block;
+  text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
+  margin: 20px auto;
+  font-size: 1.5rem;
+  text-align: center;
+  font-weight: 900;
+  color: #f12711;
+}
+.all_article_container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.single_article {
+  display: flex;
+  flex-wrap: wrap;
+  width: 95%;
+  // border: 1px solid green;
+  border-radius: 10px;
+  box-shadow: 7px 7px 15px #bbcfda, -7px -7px 15px #fff;
+  margin: 1rem 0;
+  padding: 15px;
+}
+.author_section {
+  display: flex;
+  width: 100%;
+  // border: 1px solid green;
+  margin-bottom: 10px;
+}
+.author_image {
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  background: linear-gradient(145deg, #d1d7dd, #f8ffff);
+  box-shadow: 6px 6px 13px #909498, -6px -6px 13px #ffffff;
+  // border: 1px solid green;
+}
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.author_name {
+  margin-left: 1rem;
+  text-transform: capitalize;
+  font-weight: 900;
+  font-size: 1.2rem;
+  text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
+}
+.article_date {
+  margin-left: 1rem;
+  margin-top: 0.3rem;
+  text-transform: capitalize;
+  font-weight: 900;
+  font-size: 0.9rem;
+  text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
+}
+.article_content {
+  width: 100%;
+  padding: 10px;
+}
+.article_title {
+  margin-bottom: 0.5rem;
+  font-size: 1.3rem;
+  font-weight: 900;
+  text-transform: capitalize;
+  text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
+}
+.article_body {
+  margin-bottom: 0.3rem;
+  margin-left: 10px;
+  font-size: 0.9rem;
+  font-weight: 900;
+  text-transform: capitalize;
+  text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
+  line-height: 1.3;
+  word-spacing: 1.4;
+}
+.article_more_info {
+  display: flex;
+  padding: 0px 0 0px 2rem;
+}
+.article_like {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  margin-right: 10px;
+  border-radius: 50%;
+  border-radius: 32px;
+  background: linear-gradient(145deg, #d1d7dd, #f8ffff);
+  box-shadow: 3px 3px 6px #909498, -3px -3px 6px #ffffff;
+}
+.article_favroute_count {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  margin-right: 10px;
+
+  border-radius: 50%;
+  border-radius: 32px;
+  background: linear-gradient(145deg, #d1d7dd, #f8ffff);
+  box-shadow: 3px 3px 6px #909498, -3px -3px 6px #ffffff;
+}
+.article_like_icon {
+  align-self: center;
+  margin-top: 5px;
+  // font-size: 1.3rem;
+  color: #f12711; /* fallback for old browsers */
+  filter: drop-shadow(3px 3px 2px #909498);
+  text-shadow: 5px 5px 3px #000000;
 }
