--- a/src/assets/stylesheets/article.scss
+++ b/src/assets/stylesheets/article.scss
@@ -2,7 +2,7 @@
   // height: 95vh;
   margin: 20px 30px;
   border-radius: 20px;
-  box-shadow: 7px 7px 15px #bbcfda, -7px -7px 15px #fff;
+  // box-shadow: 7px 7px 15px #bbcfda, -7px -7px 15px #fff;
   transition: all 400ms;
   background-color: #e8eff5;
   font-family: "Roboto", sans-serif;
@@ -62,7 +62,7 @@ img {
   text-transform: capitalize;
   font-weight: 900;
   font-size: 1.2rem;
-  text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
+  // text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
 }
 .article_date {
   margin-left: 1rem;
@@ -70,7 +70,7 @@ img {
   text-transform: capitalize;
   font-weight: 900;
   font-size: 0.9rem;
-  text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
+  // text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
 }
 .article_content {
   width: 100%;
@@ -81,7 +81,7 @@ img {
   font-size: 1.3rem;
   font-weight: 900;
   text-transform: capitalize;
-  text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
+  // text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
 }
 .article_body {
   margin-bottom: 0.3rem;
@@ -89,7 +89,7 @@ img {
   font-size: 0.9rem;
   font-weight: 900;
   text-transform: capitalize;
-  text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
+  // text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
   line-height: 1.3;
   word-spacing: 1.4;
 }
