--- a/src/assets/stylesheets/tag.scss
+++ b/src/assets/stylesheets/tag.scss
@@ -3,7 +3,7 @@
   margin: 20px 0;
   margin-right: 25px;
   border-radius: 20px;
-  box-shadow: 7px 7px 15px #bbcfda, -8px -8px 15px #fff;
+  // box-shadow: 7px 7px 15px #bbcfda, -8px -8px 15px #fff;
   transition: all 400ms;
   background-color: #e8eff5;
   font-family: "Roboto", sans-serif;
