added filter by tags

--- a/src/assets/stylesheets/article.scss
+++ b/src/assets/stylesheets/article.scss
@@ -21,6 +21,7 @@
   text-align: center;
   font-weight: 900;
   color: #f12711;
+  text-decoration: none;
 }
 .all_article_container {
   display: flex;
