--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -23,3 +23,4 @@ body::-webkit-scrollbar {
 @import "./signup.scss";
 @import "./create_article.scss";
 @import "./setting.scss";
+@import "./article_details.scss";
