--- a/src/assets/stylesheets/create_article.scss
+++ b/src/assets/stylesheets/create_article.scss
@@ -34,7 +34,7 @@
 //   margin-top: 5px;
 // }
 .create_article_sub_container {
-  height: 95%;
+  // height: 95%;
   width: 80%;
   margin-right: 1rem;
   border-radius: 25px;
