--- a/src/assets/stylesheets/article.scss
+++ b/src/assets/stylesheets/article.scss
@@ -80,6 +80,8 @@ img {
   // text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
 }
 .article_content {
+  // display: flex;
+  // flex-wrap: wrap;
   width: 100%;
   padding: 10px;
 }
@@ -93,6 +95,8 @@ img {
   // text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
 }
 .article_body {
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 0.3rem;
   margin-left: 10px;
   font-size: 0.9rem;
