--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -24,3 +24,4 @@ body::-webkit-scrollbar {
 @import "./create_article.scss";
 @import "./setting.scss";
 @import "./article_details.scss";
+@import "./profile.scss";
