--- a/src/assets/stylesheets/profile.scss
+++ b/src/assets/stylesheets/profile.scss
@@ -3,34 +3,38 @@
   grid-column-end: column3-end;
   background: #e8eff5;
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  // flex-direction: column;
-  height: 90vh;
+  align-items: center;
+  // justify-content: center;
+  // flex-wrap: no-wrap;
+  flex-direction: column;
+  // height: 90vh;
   width: 90%;
   margin: 2rem auto;
   border-radius: 25px;
   font-family: "Roboto", sans-serif;
-  border: 1px solid green;
-  box-shadow: 7px 7px 15px #bbcfda, -7px -7px 15px #fff;
+  // border: 1px solid green;
+  // box-shadow: 7px 7px 15px #bbcfda, -7px -7px 15px #fff;
   padding: 1rem;
+  color: #525252;
   /* cursor: cell; */
 }
 .userInfo_container {
   display: flex;
   flex-wrap: wrap;
   padding: 0.5rem;
-  border: 1px solid green;
+  // padding-left: 2rem;
+  // border: 1px solid green;
   width: 90%;
-  border: 1px solid green;
-  box-shadow: 7px 7px 15px #bbcfda, -7px -7px 15px #fff;
+  margin: 1rem;
+  // border: 1px solid green;
+  // box-shadow: 7px 7px 15px #bbcfda, -7px -7px 15px #fff;
 }
 .profile_image {
   height: 90px;
   width: 90px;
-  border-radius: 50%;
+  border-radius: 50px;
   background: linear-gradient(145deg, #d1d7dd, #f8ffff);
-  box-shadow: 6px 6px 13px #909498, -6px -6px 13px #ffffff;
+  box-shadow: 9px 9px 15px #c5cbd0, -9px -9px 15px #ffffff;
 }
 .user_details_container {
   display: flex;
@@ -58,4 +62,62 @@
   // text-transform: capitalize;
   font-weight: 900;
   font-size: 0.8rem;
+  text-decoration: none;
+}
+.edit_setting {
+  padding: 2px;
+  width: 4rem;
+  // border: 1px solid green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 7px 7px 15px #bbcfda, -4px -4px 13px #fff,
+    inset 4px 4px 8px rgba(209, 217, 230, 0.2),
+    inset -8px -8px 8px rgba(255, 255, 255, 0.2);
+  text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
+  background-color: #e8eff5;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  transition: all 400ms;
+  color: #525252;
+}
+.margin_left {
+  margin-left: 4px;
+}
+.color_red {
+  color: #f12711;
+}
+
+.edit_setting:hover {
+  box-shadow: 4px 2px 18px #bbcfda, -4px -4px 13px #fff,
+    inset 6px 6px 16px rgba(209, 217, 230, 0.8),
+    inset -8px -8px 8px rgba(255, 255, 255, 0.2);
+  border: 1px solid #f12711;
+  // transform: translateY(2px);
+  color: #f12711;
+}
+.feed_container {
+  margin: 1rem;
+  padding: 0.5rem;
+  width: 90%;
+  // border: 1px solid green;
+}
+.feed_heading {
+  display: flex;
+  width: 100%;
+  border-bottom: 1px solid #444141;
+}
+
+.feed_name {
+  padding: 3px 0.5rem;
+  font-size: 1rem;
+  font-weight: 900;
+  text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
+
+  color: #f12711;
+  text-decoration: none;
+  // border-bottom: 2px solid #f12711;
+}
+.feed_name_active {
+  font-size: 1.2rem;
+  border-bottom: 2px solid #f12711;
 }
