--- a/src/assets/stylesheets/setting.scss
+++ b/src/assets/stylesheets/setting.scss
@@ -85,7 +85,7 @@
   // inset 4px 4px 8px rgba(209, 217, 230, 0.2),
   // inset -8px -8px 8px rgba(255, 255, 255, 0.2);
   background-color: #e8eff5;
-  text-transform: capitalize;
+  // text-transform: capitalize;
   font-size: 1rem;
   font-weight: 900;
   // text-shadow: 3px 3px 2px #bbcfda, -3px -3px 2px #fff;
