few changes in header and tag section

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -25,3 +25,4 @@ body::-webkit-scrollbar {
 @import "./setting.scss";
 @import "./article_details.scss";
 @import "./profile.scss";
+@import "./media-query.scss";
