--- a/src/assets/stylesheets/header.scss
+++ b/src/assets/stylesheets/header.scss
@@ -1,25 +1,33 @@
+.fixed {
+  position: relative;
+}
+
 .header {
-  display: flex;
+  position: fixed;
+  // display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   background-color: #e8eff5;
   // border: 1px solid black;
+  // width: 100%;
   height: 100vh;
   transition: all 400ms;
 }
 .header_subcontainer {
   display: flex;
+  // align-self: center;
   // justify-content: center;
   flex-wrap: wrap;
   flex-direction: column;
   margin-left: 10px;
+  margin-top: 3rem;
   width: 95%;
   height: 85%;
   align-items: center;
   border-radius: 10px;
   // border: 1px solid green;
-  box-shadow: 7px 7px 15px #bbcfda, -7px -7px 15px #fff;
+  // box-shadow: 7px 7px 15px #bbcfda, -7px -7px 15px #fff;
   // inset 4px 4px 8px rgba(209, 217, 230, 0.2),
   // inset -8px -8px 8px rgba(255, 255, 255, 0.2);
 
